--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.shopproject"
-
-    >
+    package="com.example.shopproject">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -25,8 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShopProject"
         android:usesCleartextTraffic="true">
-
-
+        <activity
+            android:name=".Signup_Php_Mysql"
+            android:exported="false" />
         <activity
             android:name=".Mapex"
             android:exported="false" />
@@ -133,8 +132,7 @@
 
         <uses-library
             android:name="org.apache.http.legacy"
-            android:required="false"/>
-
+            android:required="false" />
     </application>
 
 </manifest>
